2016-02-23
Coding marathon!  A bunch of features.  The monsters print.  The PC can move randomly.  Monsters can kill each other
(theoretically).

2016-02-23
Set up the workspace for project 1.04